# jupyter-poetry

./: Notebook1.ipynb  README.md  pyproject.toml
